add a create service handler
