# cmd/api.go
@@ -130,6 +130,15 @@ func (app *application) mount() http.Handler {
 			r.Post("/", app.createBrandHandler)
 		})
 
+		r.Route("/service", func(r chi.Router) {
+			// Public handlers
+
+			r.Group(func(r chi.Router) {
+				r.Use(app.AuthTokenMiddleware)
+				r.Post("/", app.createServiceHandler)
+			})
+		})
+
 		r.Route("/auth", func(r chi.Router) {
 			r.Post("/user", app.registerUserHandler)
 			r.Post("/token", app.createTokenHandler)
